--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,152 +1,83 @@
-body {
-  font-size: 16px;
-  color: #fff;
-  background-color: #61122f;
-  font-family: 'Oxygen', sans-serif;
+.bg-light{
+	background-color:rgba(89,159,7,1.00);
+	font-weight: bold;
+	border:2px solid black;
 }
-
-/** HEADER **/
-#header-nav {
-  background-color: #f6b319;
-  border-radius: 0;
-  border: 0;
+.navbar-light .navbar-brand{
+	font-size: 26px;
 }
-
-#logo-img {
-  background: url('../images/restaurant-logo_large.png') no-repeat;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
-}
-
-.navbar-brand {
-  padding-top: 25px;
-}
-
-.navbar-brand h1 { /* Restaurant name */
-  font-family: 'Lora', serif;
-  color: #557c3e;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: .75;
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}
-.navbar-brand p { /* Kosher cert */
-  color: #000;
-  text-transform: uppercase;
-  font-size: .7em;
-  margin-top: 15px;
-}
-.navbar-brand p span { /* Star-K */
-  vertical-align: middle;
-}
-
-#nav-list {
-  margin-top: 10px;
-}
-#nav-list a {
-  color: #951C49;
-  text-align: center;
-}
-#nav-list a:hover {
-  background: #E7E7E7;
-}
-#nav-list a span {
-  font-size: 1.8em;
-}
-
-#phone {
-  margin-top: 5px;
-}
-#phone a { /* Phone number */
-  text-align: right;
-  padding-bottom: 0;
-}
-#phone div { /* We Deliver */
-  color: #557c3e;
-  text-align: right;
-  padding-right: 15px;
-}
-
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -30px;
-}
-/* END HEADER */
-
-/********** Large devices only **********/
-@media (min-width: 1200px) {
+.yo{
+	border:2px  solid black;
+	display: block;
+	width:100%;
+	margin:.5px;
+	background-color:#61122f ;
 
 }
-
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  /* Header */
-  #logo-img {
-    background: url('../images/restaurant-logo_medium.png') no-repeat;
-    width: 100px;
-    height: 100px;
-    margin: 5px 5px 5px 0;
-  }
-  /* End Header */
+@media(min-width: 1200px){
+	.navbar-toggler{
+		display:none;
+	}
+	.card{
+		display: none;
+	}
 }
-
-/********** Small devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-
+@media(min-width: 576px )and (max-width: 1199px){
+	.navbar-toggler{
+		display:none;
+	}
+	.card{
+		display: none;
+	}
 }
-
-/********** Extra small devices only **********/
-@media (max-width: 767px) {
-  /* Header */
-  .navbar-brand {
-    padding-top: 10px;
-    height: 80px;
-  }
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
-  }
-  .navbar-brand p { /* Kosher cert */
-    font-size: .6em;
-    margin-top: 12px;
-  }
-  .navbar-brand p img { /* Star-K */
-    height: 20px;
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }
-
-  #call-btn > a {
-    font-size: 1.5em;
-    display: block;
-    margin: 0 20px;
-    padding: 10px;
-    border: 2px solid #fff;
-    background-color: #f6b319;
-    color: #951c49;
-  }
-  #xs-deliver {
-    margin-top: 5px;
-    font-size: .7em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  /* End Header */
-
+@media(max-width: 767px){
+	#nav-size{
+		font-size: 40px;
+	}
+}
+#menu{
+	font-size:30px;
+	border-left:2px solid black;
+	border-right:2px solid black;
+	border-bottom:2px solid black;
+	color:black;
+	font-weight: bold;
+	background-color:rgba(251,35,38,1.00);
+	
+}
+.text-center{
+	background-color: #61122f;
+	color:black;
+	font-weight: bold;
+	border-bottom:2px solid black;
+	
+	width:100%;
+}
+#cover1,#cover2,#cover3,#cover4{
+	border:2px solid black;
+	margin-top: 10px;
+	padding:0;
+	}
+#content{
+	padding:2px;
+	background-color: pink;
+}
+p{
+	padding:5px;
+}
+.btn-primary{
+	background-color: #61122f;
+	color:black;
+	font-weight: bold;
+	border-color:black;
+	border:2px  solid black;
+}
+.card-body{
+	background-color:rgba(148,139,139,1.00);
+}
+.btn-primary:hover{
+	background-color: #5d7185;
+}
+.card{
+	border:0;
 }
